<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="org.fattili.luckymusic.ui.view.main.song.edit.SongEditViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/lm_background"
        tools:context=".ui.view.main.song.edit.SongEditActivity">

        <include
            android:id="@+id/lm_song_activity_song_edit_title"
            layout="@layout/lm_common_title" />

        <LinearLayout
            style="@style/lm_song_edit_ll"
            android:layout_marginTop="16dp"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/lm_song_activity_song_edit_title_tv"
                style="@style/lm_song_edit_tv"
                android:text="@string/lm_song_song_edit_title_label"  />

            <EditText
                android:id="@+id/lm_song_activity_song_edit_title_et"
                style="@style/lm_song_edit_et"
                android:text="@={viewModel.song.title}"
                android:hint="@string/lm_song_song_edit_title_hint" />
        </LinearLayout>

        <LinearLayout
            style="@style/lm_song_edit_ll"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/lm_song_activity_song_edit_album_tv"
                style="@style/lm_song_edit_tv"
                android:text="@string/lm_song_song_edit_album_label" />

            <EditText
                android:id="@+id/lm_song_activity_song_edit_album_et"
                style="@style/lm_song_edit_et"
                android:text="@={viewModel.song.album}"
                android:hint="@string/lm_song_song_edit_album_hint"
                />
        </LinearLayout>

        <LinearLayout
            style="@style/lm_song_edit_ll"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/lm_song_activity_song_edit_artist_tv"
                style="@style/lm_song_edit_tv"
                android:text="@string/lm_song_song_edit_artist_label"  />

            <EditText
                android:id="@+id/lm_song_activity_song_edit_artist_et"
                android:hint="@string/lm_song_song_edit_artist_hint"
                android:text="@={viewModel.song.artist}"
                style="@style/lm_song_edit_et" />
        </LinearLayout>
    </LinearLayout>
</layout>