<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/lm_dialog_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/lm_common_shape_dialog_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        >

        <TextView
            android:id="@+id/lm_common_dialog_title_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text="@string/lm_common_remind"
            style="@style/lm_font_style_18"
            android:gravity="center"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/lm_common_dialog_message_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            style="@style/lm_font_style_18"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/lm_common_dialog_candle_bt"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:background="@drawable/lm_common_selector_style_bt"
                style="@style/lm_font_style_dark_16"
                android:text="@string/lm_common_candle" />

            <Button
                android:id="@+id/lm_common_dialog_measure_bt"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:background="@drawable/lm_common_selector_style_bt"
                style="@style/lm_font_style_dark_16"
                android:text="@string/lm_common_measure" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
