<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/lm_dialog_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/lm_common_shape_dialog_bg"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        >
        <ImageView
            android:id="@+id/lm_main_back_iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/lm_common_selector_btn_cancel"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/lm_common_dialog_title_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text="@string/lm_songs_list_add_bt"
            style="@style/lm_font_style_18"
            android:gravity="center"/>
    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center_vertical"
            >
            <ImageView
                android:id="@+id/lm_song_songs_add_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:src="@mipmap/lm_common_edit_iv" />

            <LinearLayout
                android:id="@+id/lm_song_songs_add_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="28dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/lm_song_songs_add_name_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:maxLength="10"
                    android:hint="@string/lm_songs_name"
                    android:inputType="textWebEditText" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0.5dip"
                    android:background="@color/grey31" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/lm_common_dialog_candle_bt"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:background="@drawable/lm_common_selector_style_bt"
                style="@style/lm_font_style_dark_16"
                android:text="@string/lm_common_candle" />

            <Button
                android:id="@+id/lm_common_dialog_measure_bt"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:background="@drawable/lm_common_selector_style_bt"
                style="@style/lm_font_style_dark_16"
                android:text="@string/lm_common_measure" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
