<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/lm_dialog_bg"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/lm_background"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/lm_play_list">
                </TextView>
                
                <ImageView
                    android:id="@+id/lm_play_list_back_iv"
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:src="@drawable/lm_common_selector_btn_back">
                </ImageView>
                
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lm_play_list_empty_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/lm_common_ic_empty_50"
                    android:scaleType="centerInside">
                </ImageView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lm_play_list_null"
                    android:gravity="center"
                    android:layout_marginTop="30dp">
                </TextView>
            </LinearLayout>



            <ListView
                android:id="@+id/lm_play_list_lv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp">

            </ListView>
           

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/lm_play_list_exit_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lm_common_shape_bt"
        android:elevation="10dp"
        android:text="@string/lm_common_back"
        android:layout_margin="10dp">

    </Button>

</LinearLayout>