<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/lm_dialog_bg"
    android:gravity="bottom"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_gravity="bottom"
        app:cardBackgroundColor="@color/lm_background"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"

        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/lm_common_operate">
                </TextView>
                
                <ImageView
                    android:id="@+id/lm_song_songs_list_more_back_iv"
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:src="@drawable/lm_common_selector_btn_back">
                </ImageView>
                
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="32dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/lm_song_songs_list_more_play_ll"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/lm_common_ic_play_24"
                        android:scaleType="centerInside"
                        app:tint="@color/colorPrimary">
                    </ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        style="@style/lm_font_style_18"
                        android:text="@string/lm_song_songs_operate_play">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lm_song_songs_list_more_edit_ll"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/lm_common_ic_edit_24"
                        android:scaleType="centerInside"
                        app:tint="@color/colorPrimary">
                    </ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        style="@style/lm_font_style_18"
                        android:text="@string/lm_song_songs_operate_edit">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lm_song_songs_list_more_delete_ll"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/lm_common_ic_delete_24"
                        android:scaleType="centerInside">
                    </ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        style="@style/lm_font_style_18"
                        android:text="@string/lm_song_songs_operate_delete">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lm_song_songs_list_more_pre_play_ll"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/lm_common_ic_add_24"
                        android:scaleType="centerInside">
                    </ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        style="@style/lm_font_style_18"
                        android:text="@string/lm_song_songs_operate_pre_play">
                    </TextView>
                </LinearLayout>
            </LinearLayout>

           

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>